# quasipkg

./: README.md  pyproject.toml  quasipkg
quasipkg/: __init__.py  cli.py  core.py
tests/: test_api.py  test_quasipkg.py
