[tool.poetry]
name = "quasipkg"
version = "0.1.0"
description = "A utility to create dummy/placeholder packages for pacman"
authors = ["Dmitry Mikushin <dmitry@kernelgen.org>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/yourusername/quasipkg"
keywords = ["pacman", "arch", "linux", "package"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Software Distribution",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[tool.poetry.scripts]
quasipkg = "quasipkg.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
